# FrameX-Android

./: README.md  gradle.properties
.github/workflows/: android-build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hud.html
app/src/main/cpp/: CMakeLists.txt  framex_gles_layer.cpp  framex_ipc.cpp  framex_ipc.h  framex_vk_layer.cpp  framex_zygisk.cpp  zygisk.hpp
app/src/main/java/com/framex/app/: FrameXApplication.kt
app/src/main/java/com/framex/app/core/root/: RootManager.kt  RootShell.kt
app/src/main/java/com/framex/app/gaming/: GamingModeEngine.kt  GamingModeService.kt  GamingNotificationListener.kt
app/src/main/java/com/framex/app/hud/: FloatingWindowService.kt  GpuLayerInjector.kt  HudIpcServer.kt  HudTelemetry.kt  RootShell.kt
app/src/main/java/com/framex/app/metrics/: MetricsEngine.kt  Monitors.kt
app/src/main/java/com/framex/app/overlay/: BootReceiver.kt
app/src/main/java/com/framex/app/repository/: SettingsRepository.kt
app/src/main/java/com/framex/app/ui/navigation/: NavGraph.kt
app/src/main/java/com/framex/app/ui/screens/: AboutScreen.kt  AppearanceScreen.kt  DashboardScreen.kt  OnboardingScreen.kt  OverlayCustomizationScreen.kt  PerformanceScreen.kt  PermissionsScreen.kt  SplashScreen.kt
docs/: index.md  privacy-policy.md  store-listing.md
magisk/framex_zygisk/: customize.sh  module.prop  post-fs-data.sh
